Revelation changelog

---------------[ xxxx-xx-xx : 0.4.0-pre2 ]---------------

2005-01-29  Erik Grinaker <erikg@codepoet.no>

	* check for fd.o shared MIME utils at build-time, and avoid
	rebuilding MIME databases if not found

	* don't update MIME databases at build-time if DESTDIR is set

	* more ui module unit tests

2005-01-28  Erik Grinaker <erikg@codepoet.no>

	* run update-desktop-database on make install so that
	revelation is registered as handler for application/x-revelation
	MIME type

2005-01-26  Erik Grinaker <erikg@codepoet.no>

	* fix typo in mimetype icon installation path

2005-01-25  Erik Grinaker <erikg@codepoet.no>

	* build authmanager module with position-independent code

	* don't install authmanager into bindir

	* use Utility category for .desktop file (put into
	Accessories category in GNOME menu)

	* wrote more ui module unit tests

	* fixed a treeview drag'n'drop bug which broke dropping into
	folders directly before or after the source entry


---------------[ 2005-01-24 : 0.4.0-pre1 ]---------------

2005-01-24  Erik Grinaker <erikg@codepoet.no>

	* wrote more ui module unit tests (yawn)

	* renamed launch to go to

	* removed option for launch-on-doubleclick (now default behaviour)

	* on entry goto, the username isn't copied to the clipboard chain
	if the username is given to the goto command

	* fixed a couple of io unit tests

	* fixed a treeview drag/drop bug

	* entry module tried to use the removed stock module

2005-01-08  Erik Grinaker <erikg@codepoet.no>

	* wrote more ui module unit tests (yawn)

2005-01-07  Erik Grinaker <erikg@codepoet.no>

	* wrote more ui module unit tests

2005-01-06  Erik Grinaker <erikg@codepoet.no>

	* various minor HIG tweaks

	* ui.generate_field_edit_widget() takes a field instance as argument
	instead of field type, and sets edit widget contents based on field
	value (corresponds with ui.generate_field_display_widget())

	* ui.Toolbar() no longer uses deprecated methods
